# world_cup

./: AVLTree.h  CMakeLists.txt  Player.cpp  Player.h  Team.cpp  Team.h  avl_tree.h  catch.hpp  list.h  main.cpp  main23a1.cpp  player.cpp  player.h  team.cpp  team.h  worldcup23a1.cpp  worldcup23a1.h
